// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders button states deprecated prop - primary 1`] = `
<Styled(Box)
  as="button"
  buttonColor="orange"
  className=""
  size="default"
  type="button"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states destructive 1`] = `
<Styled(Box)
  as="button"
  buttonColor="red"
  className=""
  size="default"
  type="button"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states disabled 1`] = `
<Styled(Box)
  as="button"
  className=""
  disabled={true}
  size="default"
  type="button"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states external button 1`] = `
<Styled(Box)
  as="button"
  className=""
  size="default"
  type="button"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states external to without component 1`] = `
<Styled(Box)
  as="a"
  className=""
  href="/nocomp"
  rel="noopener noreferrer"
  size="default"
  target="_blank"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states flat 1`] = `
<Styled(Box)
  as="button"
  className=""
  size="default"
  type="button"
  visualWeight="weak"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states flat with color 1`] = `
<Styled(Box)
  as="button"
  buttonColor="red"
  className=""
  size="default"
  type="button"
  visualWeight="weak"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states flat with color and disabled 1`] = `
<Styled(Box)
  as="button"
  buttonColor="red"
  className=""
  disabled={true}
  size="default"
  type="button"
  visualWeight="weak"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states fullWidth 1`] = `
<Styled(Box)
  as="button"
  className=""
  fullWidth={true}
  size="default"
  type="button"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states large size 1`] = `
<Styled(Box)
  as="button"
  className=""
  size="large"
  type="button"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states outline enabled 1`] = `
<Styled(Box)
  as="button"
  className=""
  size="default"
  type="button"
  visualWeight="normal"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states submit 1`] = `
<Styled(Box)
  as="button"
  className=""
  size="default"
  type="submit"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states to while disabled 1`] = `
<Styled(Box)
  as={[Function]}
  className=""
  disabled={true}
  size="default"
  to="/withcomp"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states to with component 1`] = `
<Styled(Box)
  as={[Function]}
  className=""
  size="default"
  to="/withcomp"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states to without component 1`] = `
<Styled(Box)
  as="a"
  className=""
  href="/nocomp"
  rel=""
  size="default"
  target=""
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;
